MTLParser fatal brutal bug fixed! :D

--- a/MPEG4/res/values/strings.xml
+++ b/MPEG4/res/values/strings.xml
@@ -17,6 +17,6 @@
 <resources>
 
     <string name="hello">Hello, OpenGL ES 2.0!</string>
-    <string name="app_name">Hello OpenGL ES 2.0</string>
+    <string name="app_name">Modern Talking Head for Android</string>
 
 </resources>
